--- a/crovest-dashboard/vercel.json
+++ b/crovest-dashboard/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } },
+    { "src": "frontend/index.html", "use": "@vercel/static" },
     { "src": "node-backend/server.js", "use": "@vercel/node" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "node-backend/server.js" },
-    { "src": "/(.*)", "dest": "frontend/dist/$1" }
+    { "src": "/(.*)", "dest": "frontend/index.html" }
   ]
 }
