--- a/crovest-dashboard/node-backend/package.json
+++ b/crovest-dashboard/node-backend/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "backend",
+  "name": "crovest-api",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.6",
-    "express": "^5.2.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "pg": "^8.11.3"
   }
 }
