--- a/crovest-dashboard/vercel.json
+++ b/crovest-dashboard/vercel.json
@@ -7,5 +7,8 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "node-backend/server.js" },
     { "src": "/(.*)", "dest": "frontend/index.html" }
-  ]
+  ],
+  "env": {
+    "DATABASE_URL": "postgresql://neondb_owner:npg_D7tgkMPZw4KJ@ep-falling-field-aiaz8s71-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require"
+  }
 }
